intear-dex-management/tests/snapshots/xyk_writes__referrer_register_fee_assets_already_registered.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"carol.near\",\n&[\"xyk\", \"referrer\", \"register-fee-assets\", \"carol.near\", \"near\"]).await"
---
$ near-intear-dex-management xyk referrer register-fee-assets carol.near near network-config sandbox sign-with-plaintext-private-key ed25519:2zF4Msijmc39gdTqTfG7pxt7SSH6MW3nX9muBLz36JF4r5xWWvxCSeAXJdWTiuy6f2MeDLTh4NDEQJVzhemXLcf5 send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk referrer register-fee-assets carol.near near network-config sandbox sign-with-plaintext-private-key ed25519:2zF4Msijmc39gdTqTfG7pxt7SSH6MW3nX9muBLz36JF4r5xWWvxCSeAXJdWTiuy6f2MeDLTh4NDEQJVzhemXLcf5 send

Error:
   0: carol.near already collects fees in NEAR on slimedragon.near/xyk
