intear-dex-management/tests/snapshots/xyk_writes__referrer_set_fees.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "xyk_transaction_paying_storage(&sandbox, &cli, \"carol.near\", XYK_DEX_ID,\n&[\"xyk\", \"referrer\", \"set-fees\", \"carol.near\", \"0.1%\", \"0.05%\"]).await"
---
$ near-intear-dex-management xyk referrer set-fees carol.near '0.1%' '0.05%' network-config sandbox sign-with-plaintext-private-key ed25519:2zF4Msijmc39gdTqTfG7pxt7SSH6MW3nX9muBLz36JF4r5xWWvxCSeAXJdWTiuy6f2MeDLTh4NDEQJVzhemXLcf5 send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer carol.near · dex.intear.near
│  Deposit 0.005 NEAR into carol.near's storage balance on dex.intear.near
│  Register near for carol.near, which takes about 0.00219 NEAR of carol.near's storage balance
│  Set carol.near's referral fees on slimedragon.near/xyk to 0.1%, and 0.05% for pairs of NEAR, USDC, USDT and tokens bridged through omft.near or omni.hot.tg
│  Attach 0.001 NEAR from carol.near's wallet for the storage this takes; slimedragon.near/xyk sends back what it doesn't use
│  Actions: storage_deposit (0.005 NEAR, 10 Tgas), register_assets (1 yoctoNEAR, 8 Tgas), execute_operations (0.001 NEAR, 100 Tgas)
├  Unsigned transaction:
│    signer_id:    carol.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  storage_deposit
│                       args:         {}
│                       gas:          10.0 Tgas
│                       deposit:      0.005 NEAR
│       -- function call:
│                       method name:  register_assets
│                       args:         {
│                                       "asset_ids": [
│                                         "near"
│                                       ],
│                                       "for": null
│                                     }
│                       gas:          8.0 Tgas
│                       deposit:      1 yoctoNEAR
│       -- function call:
│                       method name:  execute_operations
│                       args:         {
│                                       "operations": [
│                                         {
│                                           "DexCall": {
│                                             "dex_id": "slimedragon.near/xyk",
│                                             "method": "set_referrer_settings",
│                                             "args": "AOgDAAD0AQAA",
│                                             "attached_assets": {
│                                               "near": "1000000000000000000000"
│                                             }
│                                           }
│                                         }
│                                       ]
│                                     }
│                       gas:          100.0 Tgas
│                       deposit:      0.001 NEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"carol.near","asset_id":"near","balance":"1000000000000000000000"}}
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"carol.near","asset_id":"near","balance":"0"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150001000000000000000000000"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150000000000000000000000000"}}
│    Logs [carol.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"carol.near","asset_id":"near","balance":"1000000000000000000000"}}
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"carol.near","asset_id":"near","balance":"0"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150001000000000000000000000"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150000000000000000000000000"}}
│    Logs [carol.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"carol.near","asset_id":"near","balance":"1000000000000000000000"}}
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"carol.near","asset_id":"near","balance":"0"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150001000000000000000000000"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150000000000000000000000000"}}
│    Logs [carol.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "storage_deposit" call to <dex.intear.near> on behalf of <carol.near> succeeded.
The "register_assets" call to <dex.intear.near> on behalf of <carol.near> succeeded.
The "execute_operations" call to <dex.intear.near> on behalf of <carol.near> succeeded.

├  ✓ Set carol.near's referral fees on slimedragon.near/xyk to 0.1%, and 0.05% for pairs of NEAR, USDC, USDT and tokens bridged through omft.near or omni.hot.tg
│  carol.near now has 0 NEAR on dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk referrer set-fees carol.near '0.1%' '0.05%' network-config sandbox sign-with-plaintext-private-key ed25519:2zF4Msijmc39gdTqTfG7pxt7SSH6MW3nX9muBLz36JF4r5xWWvxCSeAXJdWTiuy6f2MeDLTh4NDEQJVzhemXLcf5 send
