intear-dex-management/tests/snapshots/xyk_writes__referrer_set_fees_too_high.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"carol.near\",\n&[\"xyk\", \"referrer\", \"set-fees\", \"carol.near\", \"5%\", \"1%\"]).await"
---
$ near-intear-dex-management xyk referrer set-fees carol.near '5%' '1%' network-config sandbox sign-with-plaintext-private-key ed25519:2zF4Msijmc39gdTqTfG7pxt7SSH6MW3nX9muBLz36JF4r5xWWvxCSeAXJdWTiuy6f2MeDLTh4NDEQJVzhemXLcf5 send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk referrer set-fees carol.near '5%' '1%' network-config sandbox sign-with-plaintext-private-key ed25519:2zF4Msijmc39gdTqTfG7pxt7SSH6MW3nX9muBLz36JF4r5xWWvxCSeAXJdWTiuy6f2MeDLTh4NDEQJVzhemXLcf5 send

Error:
   0: Referral fees must be less than 5%
