intear-dex-management/tests/snapshots/xyk_writes__swap_buy_from_balance_to_wallet.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"xyk\", \"swap\", \"alice.near\", \"0\", \"buy\", \"2 USDt\", \"max-slippage\", \"1%\",\n\"from-balance\", \"to-wallet\"]).await"
---
$ near-intear-dex-management xyk swap alice.near 0 buy '2 USDt' max-slippage '1%' from-balance to-wallet network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer alice.near · dex.intear.near
│  Buy 2 USDt on pool #0 (NEAR / USDt) of slimedragon.near/xyk for at most 0.693236705588017848519902 NEAR, 0.686372975829720642098912 NEAR at the current price
│  The NEAR comes from alice.near's balance on dex.intear.near
│  The USDt goes to alice.near's wallet
│  Actions: execute_operations (1 yoctoNEAR, 100 Tgas)
├  Unsigned transaction:
│    signer_id:    alice.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  execute_operations
│                       args:         {
│                                       "operations": [
│                                         {
│                                           "SwapSimple": {
│                                             "dex_id": "slimedragon.near/xyk",
│                                             "message": "AAAAAA==",
│                                             "asset_in": "near",
│                                             "asset_out": "nep141:usdt.tether-token.near",
│                                             "amount": {
│                                               "Amount": {
│                                                 "ExactOut": "2000000"
│                                               }
│                                             },
│                                             "constraint": "693236705588017848519902"
│                                           }
│                                         },
│                                         {
│                                           "Withdraw": {
│                                             "asset_id": "nep141:usdt.tether-token.near",
│                                             "amount": "PreviousSwapOutput",
│                                             "to": null,
│                                             "rescue_address": null
│                                           }
│                                         }
│                                       ],
│                                       "referrer": null
│                                     }
│                       gas:          100.0 Tgas
│                       deposit:      1 yoctoNEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_event","data":{"dex_id":"slimedragon.near/xyk","event":{"standard":"xyk","version":"1.0.0","event":"pool_updated","data":{"pool_id":0,"pool":{"Private":{"assets":[{"asset_id":"near","balance":"101685528102968829952057221"},{"asset_id":"nep141:usdt.tether-token.near","balance":"295037059"}],"fees":{"receivers":[["Pool",2000],[{"Account":"alice.near"},500],[{"Account":"plach.intear.near"},1]]},"fee_configuration":{"receivers":[["Pool",2000],[{"Account":"alice.near"},500]]},"owner_id":"slimedragon.near","locked":false}}}},"referrer":null,"user":"alice.near"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_event","data":{"dex_id":"slimedragon.near/xyk","event":{"standard":"xyk","version":"1.0.0","event":"swap","data":{"pool_id":0,"request":{"message":"AAAAAA==","asset_in":"near","asset_out":"nep141:usdt.tether-token.near","amount":{"ExactOut":"2000000"},"referrer":null},"amount_in":"686372975829720642098912","fees_breakdown":[["Pool","near","1372745951659441284197"],[{"Account":"alice.near"},"near","343186487914860321049"],[{"Account":"plach.intear.near"},"near","686372975829720642"]],"amount_out":"2000000"}},"referrer":null,"user":"alice.near"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"near","balance":"3313627024170279357901088"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"151686372975829720642098912"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"nep141:usdt.tether-token.near","balance":"1295037059"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"nep141:usdt.tether-token.near","balance":"255462941"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"swap","data":{"dex_id":"slimedragon.near/xyk","request":{"message":"AAAAAA==","asset_in":"near","asset_out":"nep141:usdt.tether-token.near","amount":{"ExactOut":"2000000"},"referrer":null},"amount_in":"686372975829720642098912","amount_out":"2000000","trader":"alice.near","referrer":null}}
│      Executing operation 1
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"nep141:usdt.tether-token.near","balance":"253462941"}}
│    Logs [usdt.tether-token.near]:
│      EVENT_JSON:{"standard":"nep141","version":"1.0.0","event":"ft_transfer","data":[{"old_owner_id":"dex.intear.near","new_owner_id":"alice.near","amount":"2000000"}]}
│    Logs [alice.near]:   No logs
│    Logs [dex.intear.near]:
│      After withdraw: Ok(())
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"withdraw","data":{"from":{"Account":"alice.near"},"to":"alice.near","asset_id":"nep141:usdt.tether-token.near","amount":"2000000"}}
│    Logs [alice.near]:   No logs
│    Logs [alice.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "execute_operations" call to <dex.intear.near> on behalf of <alice.near> succeeded.

├  ✓ Swapped on pool #0 (NEAR / USDt) of slimedragon.near/xyk; the USDt went to alice.near's wallet
│  Pool #0 of slimedragon.near/xyk now holds 101.685528102968829952057221 NEAR and 295.037059 USDt
│  Pool #0 of slimedragon.near/xyk swapped 0.686372975829720642098912 NEAR for 2 USDt
│  alice.near now has 3.313627024170279357901088 NEAR on dex.intear.near
│  alice.near now has 253.462941 USDt on dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk swap alice.near 0 buy '2 USDt' max-slippage '1%' from-balance to-wallet network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
