intear-dex-management/tests/snapshots/xyk_writes__swap_buy_on_public_pool.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"xyk\", \"swap\", \"alice.near\", \"2\", \"buy\", \"5000 INTEL\", \"max-slippage\", \"1%\",\n\"from-balance\", \"to-balance\"]).await"
---
$ near-intear-dex-management xyk swap alice.near 2 buy '5000 INTEL' max-slippage '1%' from-balance to-balance network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer alice.near · dex.intear.near
│  Buy 5,000 INTEL on pool #2 (NEAR / INTEL) of slimedragon.near/xyk for at most 0.254787996205929244616658 NEAR, 0.252265342778147766947186 NEAR at the current price
│  The NEAR comes from alice.near's balance on dex.intear.near
│  The INTEL goes to alice.near's balance on dex.intear.near
│  Actions: execute_operations (1 yoctoNEAR, 100 Tgas)
├  Unsigned transaction:
│    signer_id:    alice.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  execute_operations
│                       args:         {
│                                       "operations": [
│                                         {
│                                           "SwapSimple": {
│                                             "dex_id": "slimedragon.near/xyk",
│                                             "message": "AgAAAA==",
│                                             "asset_in": "near",
│                                             "asset_out": "nep141:intel.tkn.near",
│                                             "amount": {
│                                               "Amount": {
│                                                 "ExactOut": "5000000000000000000000"
│                                               }
│                                             },
│                                             "constraint": "254787996205929244616658"
│                                           }
│                                         }
│                                       ],
│                                       "referrer": null
│                                     }
│                       gas:          100.0 Tgas
│                       deposit:      1 yoctoNEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_event","data":{"dex_id":"slimedragon.near/xyk","event":{"standard":"xyk","version":"1.0.0","event":"pool_updated","data":{"pool_id":2,"pool":{"Public":{"assets":[{"asset_id":"near","balance":"50252013077435369619180239"},{"asset_id":"nep141:intel.tkn.near","balance":"995000000000000000000000"}],"fees":{"receivers":[["Pool",3000],[{"Account":"plach.intear.near"},1000]]},"fee_configuration":{"receivers":[["Pool",{"Fixed":3000}]]},"total_shares":"1000000000000000000"}}}},"referrer":null,"user":"alice.near"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_event","data":{"dex_id":"slimedragon.near/xyk","event":{"standard":"xyk","version":"1.0.0","event":"swap","data":{"pool_id":2,"request":{"message":"AgAAAA==","asset_in":"near","asset_out":"nep141:intel.tkn.near","amount":{"ExactOut":"5000000000000000000000"},"referrer":null},"amount_in":"252265342778147766947186","fees_breakdown":[["Pool","near","756796028334443300841"],[{"Account":"plach.intear.near"},"near","252265342778147766947"]],"amount_out":"5000000000000000000000"}},"referrer":null,"user":"alice.near"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"near","balance":"1563954867880046451274951"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"154979345673217649019875244"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"nep141:intel.tkn.near","balance":"7995000000000000000000000"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"nep141:intel.tkn.near","balance":"5000000000000000000000"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"swap","data":{"dex_id":"slimedragon.near/xyk","request":{"message":"AgAAAA==","asset_in":"near","asset_out":"nep141:intel.tkn.near","amount":{"ExactOut":"5000000000000000000000"},"referrer":null},"amount_in":"252265342778147766947186","amount_out":"5000000000000000000000","trader":"alice.near","referrer":null}}
│    Logs [alice.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "execute_operations" call to <dex.intear.near> on behalf of <alice.near> succeeded.

├  ✓ Swapped on pool #2 (NEAR / INTEL) of slimedragon.near/xyk; the INTEL went to alice.near's balance on dex.intear.near
│  Pool #2 of slimedragon.near/xyk now holds 50.252013077435369619180239 NEAR and 995,000 INTEL
│  Pool #2 of slimedragon.near/xyk swapped 0.252265342778147766947186 NEAR for 5,000 INTEL
│  alice.near now has 1.563954867880046451274951 NEAR on dex.intear.near
│  alice.near now has 5,000 INTEL on dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk swap alice.near 2 buy '5000 INTEL' max-slippage '1%' from-balance to-balance network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
