intear-dex-management/tests/snapshots/xyk_writes__swap_buying_more_than_the_pool_has.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"xyk\", \"swap\", \"alice.near\", \"0\", \"buy\", \"400 USDt\", \"max-slippage\", \"1%\",\n\"from-balance\", \"to-balance\"]).await"
---
$ near-intear-dex-management xyk swap alice.near 0 buy '400 USDt' max-slippage '1%' from-balance to-balance network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk swap alice.near 0 buy '400 USDt' max-slippage '1%' from-balance to-balance network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: dex.intear.near failed in simulate_swap_simple on network sandbox: Failed to call function 'swap': [slimedragon.near/xyk] Dex panicked: Amount must be less than out balance

Suggestion: The pool doesn't hold that much; buy less
